--- a/myapp/templates/hello_world.html
+++ b/myapp/templates/hello_world.html
@@ -295,7 +295,7 @@
   </head>
   <body >
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row" style="font-size: small;">
         <div class="form-group mx-sm-3 mb-2">
           <label for="EntryPrice" style="color: white;font:large">Entry Price: <b>{{EntryPrice}}</b></label>
@@ -307,31 +307,31 @@
           {% comment %} <input type="text" class="form-control" id="StrikePrice" placeholder="StrikePrice" name="strike"> {% endcomment %}
       </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="row mb-2" style="text-align:center">
       <div class="col-md-5" style="margin-left: 20px;">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary">NIFTY</strong>
-            <h3 class="mb-0" style="color: white;">Consistent</h3>
+            <h3 class="mb-0" style="color: white;">Consistent ({{co_symbol}})</h3>
             <!-- <div class="mb-1 text-muted">Nov 12</div> -->
             <ul class="list-group">
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 Entry
-                <span class="badge badge-primary badge-pill">{{EntryPrice}}</span>
+                <span class="badge badge-primary badge-pill" style="font-size: large;">{{EntryPrice}}</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 Strike
-                <span class="badge badge-primary badge-pill">{{co_strike}}</span>
+                <span class="badge badge-primary badge-pill" style="font-size: large;">{{co_strike}}</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 High
-                <span class="badge badge-primary badge-pill">1</span>
+                <span class="badge badge-primary badge-pill" style="font-size: large;">1</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 Low
-                <span class="badge badge-primary badge-pill">1</span>
+                <span class="badge badge-primary badge-pill" style="font-size: large;">1</span>
               </li>
             </ul>
           </div>
@@ -342,24 +342,24 @@
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-success">NIFTY</strong>
-            <h3 class="mb-0" style="color: white;">Assumption</h3>
+            <h3 class="mb-0" style="color: white;">Assumption ({{as_symbol}})</h3>
             <!-- <div class="mb-1 text-muted">Nov 11</div> -->
             <ul class="list-group">
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 Entry
-                <span class="badge badge-primary badge-pill">{{as_entry}}</span>
+                <span class="badge badge-primary badge-pill" style="font-size: large;" >{{as_entry}}</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 Strike
-                <span class="badge badge-primary badge-pill">{{as_strike}}</span>
+                <span class="badge badge-primary badge-pill" style="font-size: large;">{{as_strike}}</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 High
-                <span class="badge badge-primary badge-pill">1</span>
+                <span class="badge badge-primary badge-pill" style="font-size: large;" >1</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 Low
-                <span class="badge badge-primary badge-pill">1</span>
+                <span class="badge badge-primary badge-pill" style="font-size: large;">1</span>
               </li>
             </ul>
 
